// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteContentElement 1`] = `
Object {
  "children": Array [
    Object {
      "id": "1",
      "text": "",
    },
  ],
  "id": "0",
}
`;

exports[`materializeEditorPath 1`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [],
    "to": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": "1",
              "text": "a",
            },
          ],
          "id": "2",
        },
      ],
      "id": "3",
    },
  },
}
`;

exports[`materializeEditorPath 2`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "1",
                "text": "a",
              },
            ],
            "id": "2",
          },
        ],
        "id": "3",
      },
    ],
    "to": Object {
      "children": Array [
        Object {
          "id": "1",
          "text": "a",
        },
      ],
      "id": "2",
    },
  },
}
`;

exports[`materializeEditorPath 3`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "1",
                "text": "a",
              },
            ],
            "id": "2",
          },
        ],
        "id": "3",
      },
      Object {
        "children": Array [
          Object {
            "id": "1",
            "text": "a",
          },
        ],
        "id": "2",
      },
    ],
    "to": Object {
      "id": "1",
      "text": "a",
    },
  },
}
`;

exports[`materializeEditorPath 4`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "1",
                "text": "a",
              },
            ],
            "id": "2",
          },
        ],
        "id": "3",
      },
      Object {
        "children": Array [
          Object {
            "id": "1",
            "text": "a",
          },
        ],
        "id": "2",
      },
    ],
    "to": Object {
      "editorText": Object {
        "id": "1",
        "text": "a",
      },
      "offset": 0,
    },
  },
}
`;

exports[`materializeEditorPath 5`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "parents": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "1",
                "text": "a",
              },
            ],
            "id": "2",
          },
        ],
        "id": "3",
      },
      Object {
        "children": Array [
          Object {
            "id": "1",
            "text": "a",
          },
        ],
        "id": "2",
      },
    ],
    "to": Object {
      "editorText": Object {
        "id": "1",
        "text": "a",
      },
      "offset": 1,
    },
  },
}
`;

exports[`materializeEditorPath 6`] = `
Object {
  "_tag": "None",
}
`;

exports[`materializeEditorPath 7`] = `
Object {
  "_tag": "None",
}
`;

exports[`materializeEditorPath 8`] = `
Object {
  "_tag": "None",
}
`;

exports[`materializeEditorPath 9`] = `
Object {
  "_tag": "None",
}
`;

exports[`normalizeEditorElement do not add children 1`] = `
Object {
  "children": Array [],
  "id": "0",
}
`;

exports[`normalizeEditorElement do not remove children 1`] = `
Object {
  "children": Array [],
  "id": "0",
}
`;

exports[`normalizeEditorElement do not remove children 2`] = `
Object {
  "children": Array [
    Object {
      "id": "2",
      "text": "",
    },
  ],
  "id": "1",
}
`;

exports[`normalizeEditorElement do not remove children 3`] = `
Object {
  "children": Array [
    Object {
      "id": "4",
      "text": ".",
    },
  ],
  "id": "3",
}
`;

exports[`normalizeEditorElement merges adjacent texts 1`] = `
Object {
  "children": Array [
    Object {
      "id": "1",
      "text": "ab",
    },
    Object {
      "children": Array [
        Object {
          "id": "4",
          "text": "abc",
        },
        Object {
          "children": Array [
            Object {
              "id": "8",
              "text": "a",
            },
            Object {
              "children": Array [],
              "id": "9",
            },
            Object {
              "id": "10",
              "text": "bc",
            },
          ],
          "id": "7",
        },
      ],
      "id": "3",
    },
    Object {
      "id": "12",
      "text": "a",
    },
    Object {
      "id": "13",
      "text": "",
    },
    Object {
      "id": "14",
      "text": "b",
    },
  ],
  "id": "0",
}
`;
